samples/_failures_safe/1761560686_aeb449_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e09854a8.c: In function ‘main’:
./samples/SAFE/__tmp_e09854a8.c:156:37: error: expected ‘)’ at end of input
  156 |     if (a < 0 || b < 0 || c < 0 || d
      |        ~                            ^
      |                                     )
./samples/SAFE/__tmp_e09854a8.c:156:5: error: expected declaration or statement at end of input
  156 |     if (a < 0 || b < 0 || c < 0 || d
      |     ^~
